<resources>
    <string name="app_name">Planr</string>
    <string name="nav_home">Home</string>
    <string name="nav_browse">Browse</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_signout">Sign Out</string>

    <!--Login-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <!--Register-->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="location">Location</string>
    <string name="create_account">Create Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
